syntax = "proto3";

package auth;

option go_package = "simple-crud/pb/auth";
import "google/protobuf/empty.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(google.protobuf.Empty) returns (CommonResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message CommonResponse {
    bool status = 1;
    string message = 2;
}

message Token {
    string access_token =1;
}

message LoginResponse {
    bool status = 1;
    string message = 2;
    Token data = 3;
}